# Prozorro-Sale-Start-Kit

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  requirements-dev.txt  setup.cfg
prozorro_sale_start_kit/: __main__.py  constants.py  main.py
prozorro_sale_start_kit/template/: cookiecutter.json
prozorro_sale_start_kit/template/hooks/: constants.py  post_gen_project.py  pre_gen_project.py
prozorro_sale_start_kit/template/{{cookiecutter.project_name}}/: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  CONTRIBUTING.md  Dockerfile  Makefile  README.md  demo-k8s.yaml  docker-compose.yml  setup.py  unpack_specs.py
prozorro_sale_start_kit/template/{{cookiecutter.project_name}}/config/: logging.yml
prozorro_sale_start_kit/template/{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
prozorro_sale_start_kit/template/{{cookiecutter.project_name}}/helm/prozorro-sale-{{cookiecutter.project_name}}/: Chart.yaml  values.yaml
prozorro_sale_start_kit/template/{{cookiecutter.project_name}}/helm/{{cookiecutter.project_name}}/: Chart.yaml  values.yaml
prozorro_sale_start_kit/template/{{cookiecutter.project_name}}/requirements/: development.txt  documentation.txt  requirements.txt  test.txt
prozorro_sale_start_kit/template/{{cookiecutter.project_name}}/src/prozorro_sale/: __init__.py
prozorro_sale_start_kit/template/{{cookiecutter.project_name}}/test/: conftest.py
prozorro_sale_start_kit/template/{{cookiecutter.project_name}}/test/integration/: test_api.py  test_chronograph.py  test_databridge.py
prozorro_sale_start_kit/utils/: patch.py  validator.py
(+37 files in other folders)
