[metadata]
name = prozorro-sale-start-kit
version = attr: prozorro_sale_start_kit.utils.versiontools.get_self_version
description = The tool that helps quickly create a Prozorro Sale micro web service
long_description = file: README.md
long_description_content_type = text/markdown
platforms = 
    POSIX
author = Pavel Kuzmenko
author_email = kyzmenko.pavel@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/Kuzmenko-Pavel/Prozorro-Sale-Start-Kit
project_urls = 
    Source Code = https://github.com/Kuzmenko-Pavel/Prozorro-Sale-Start-Kit
    GitHub Issues = https://github.com/Kuzmenko-Pavel/Prozorro-Sale-Start-Kit/issues
    Documentation = https://github.com/Kuzmenko-Pavel/Prozorro-Sale-Start-Kit/wiki
    CI: Travis = https://travis-ci.com/github/Kuzmenko-Pavel/Prozorro-Sale-Start-Kit

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Development Status :: 4 - Beta
    Framework :: AsyncIO

keywords =
    prozorro-sale
    prozorro-sale-start-kit
    cookiecutter==1.7.0
    aiohttp


[options]
packages = find_namespace:
include_package_data = True
zip_safe = True
python_requires = >=3.9
setup_requires =
    setuptools_scm>=3.4
    setuptools_scm_git_archive==1.1
install_requires =
    cookiecutter==1.7.0
    click >= 7.0
    PyInquirer==1.0.3
    jinja2-time==0.2.0
    jinja2-strcase==0.0.2


[options.entry_points]
console_scripts =
    PssK = prozorro_sale_start_kit.main:main

[bdist_wheel]
universal = True